--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 	</head>
 	
 	<body>
+	<h1> GIT</h1>
+	<h2>Trabalhando em equipe</h2>
+	<ul>
+		<li>Funciona de maneira Distribuida</li>
+		<li>Permite edição</li>
+		<li>não depende da conexão ativa do servidor</li>
 	</body>
 </html>
